# simu-stack

./: .gitignore  CMakeLists.txt  READEME.md
include/: function.hpp  stack.hpp
src/: function.cpp  main.cpp  stack.cpp
